kanc/src/tests/sample_code/should_fail/single_file/bind/ref_variant_in_variant_param_type.k
type U(T: Type, t: T) {}

type Bar {
    .d(n: U(Bar, Bar.d)): Bar,
}
